--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,12 @@
 <html>
   <head>
   	  <title>My Profile</title>
+      <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-  	<h1>~Nia Barnes~</h1>
-  	Hampton University
+  	<h1 id="Name">~ Nia Barnes ~</h1>
+  	<h2>Hampton University</h2>
     <br>
   	<img width="250" height="250" src="Soo Eonni.jpg">
     <br>
@@ -13,12 +14,14 @@
   		The Site I Spent Forever On 
     </a>
   	
-  <ol>
-    <li>I'm teaching myself Korean</li>
-    <li>I was homeschooled</li>
-    <li>I love yogurt too much to be normal</li>
-  </ol>
 
+  <div id="List">
+    <ol>
+      <li>I'm teaching myself Korean</li>
+      <li>I was homeschooled</li>
+      <li>I love yogurt too much to be normal</li>
+    </ol>
+  </div>
 
   </body>
 
